test_data/end_to_end/err__fn_call/stderr.txt
error: invalid callee type: expected function, found `i32`
  --> main.cz:3:5
3 |     x();
        ~

error: invalid callee type: expected function, found `?integer`
  --> main.cz:7:6
7 |     (100 + 10)();
         ~~~~~~~~

error: invalid callee type: expected function, found `{}`
  --> main.cz:11:5
11 |     {}();
         ~~

error: invalid callee type: expected function, found `{foo: String}`
  --> main.cz:15:5
15 |     {foo: "foo"}();
         ~~~~~~~~~~~~

error: mismatching types in fn call of `foo::(_:b)`: expected `i32`, found `String`
  --> main.cz:20:9
20 |     foo("test", b: 42);
             ~~~~~~

error: mismatching types in fn call of `foo::(_:b)`: expected `String`, found `?integer`
  --> main.cz:20:20
20 |     foo("test", b: 42);
                        ~~

error: name `f` is defined multiple times
  --> main.cz:25:8
25 |     fn f() {}
            ~

error: invalid callee type: expected function, found `i32`
  --> main.cz:26:5
26 |     f();
         ~

error: invalid callee type: expected function, found `?integer`
  --> main.cz:32:5
32 |     f();
         ~
